added image tags to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <main id="box-display">
+      <img src="img/bag.jpg" id="img1">
+      <img src="img/banana.jpg" id="img2">
+      <img src="img/bathroom.jpg" id="img3">
     </main>
     <script src="app.js"></script>
   </body>
