Instantiates all of the image objects

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <main id="box-display">
-      <img src="img/bag.jpg" id="img1">
-      <img src="img/banana.jpg" id="img2">
-      <img src="img/bathroom.jpg" id="img3">
+    <main>
+      <img src="" id="img1">
+      <img src="" id="img2">
+      <img src="" id="img3">
     </main>
     <script src="app.js"></script>
   </body>
