--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <main>
-      <img src="" id="img1">
-      <img src="" id="img2">
-      <img src="" id="img3">
+      <img class="researchImage" id="" src="">
+      <img class="researchImage" id="" src="">
+      <img class="researchImage" id="" src="">
     </main>
     <script src="app.js"></script>
   </body>
