--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <main>
+      <h1>Please select your favorite item!</h1>
       <img class="researchImage" id="" src="">
       <img class="researchImage" id="" src="">
       <img class="researchImage" id="" src="">
