Added section for the canvas element on the HTML, added styling to see it with CSS, added basic addition to DOM on the JS

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <img class="researchImage" id="" src="">
       <img class="researchImage" id="" src="">
     </main>
+    <article id="canvas-chart">
+    </article>
     <script src="app.js"></script>
   </body>
 </html>
