--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Bus Mall</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/chart.min.js"></script>
   </head>
   <body>
     <main>
@@ -13,6 +14,6 @@
     </main>
     <article id="canvas-chart">
     </article>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
