trying multiple methods to get canvas graph to work. I HATE YOU CANVAS

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       <img class="researchImage" id="" src="">
       <img class="researchImage" id="" src="">
       <img class="researchImage" id="" src="">
+      <canvas id="canvasChart" width="700" height="400"></canvas>
     </main>
-    <article id="canvas-chart">
-    </article>
     <script src="js/app.js"></script>
   </body>
 </html>
