Changed data set generation for the chart to be generated by an object constructor. Graph displays but no data is shown...

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <body>
     <main>
       <h1>Please select your favorite item!</h1>
-      <img class="researchImage" id="" src="">
-      <img class="researchImage" id="" src="">
-      <img class="researchImage" id="" src="">
-      <canvas id="canvasChart" width="700" height="400"></canvas>
+      <img class="research-image" id="" src="">
+      <img class="research-image" id="" src="">
+      <img class="research-image" id="" src="">
+      <canvas id="canvas-chart" width="700" height="400"></canvas>
     </main>
     <script src="js/app.js"></script>
   </body>
