Added section for the buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <img class="research-image" id="" src="">
       <img class="research-image" id="" src="">
       <img class="research-image" id="" src="">
+      <section id="userForm">
+      </section>
       <canvas id="canvas-chart" width="700" height="400"></canvas>
     </main>
     <script src="js/app.js"></script>
