--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   </head>
   <body>
     <main>
-      <h1>Please select your favorite item!</h1>
-      <img class="research-image" id="" src="">
-      <img class="research-image" id="" src="">
-      <img class="research-image" id="" src="">
-      <section id="userForm">
+      <section id="image-section">
+        <h1>Please select your favorite item!</h1>
+        <img class="research-image" id="" src="">
+        <img class="research-image" id="" src="">
+        <img class="research-image" id="" src="">
+      </section>
+      <section id="user-form">
       </section>
       <canvas id="canvas-chart" width="700" height="400"></canvas>
     </main>
