--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       </section>
       <section id="user-form">
       </section>
+      <article id="canvas-section">
       <canvas id="canvas-chart" width="700" height="400"></canvas>
+    </article>
     </main>
     <script src="js/app.js"></script>
   </body>
