Added a few pseudo-selectors, the animate css library, changed sections of html around a bit.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
   <head>
     <title>Bus Mall</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <script src="js/chart.min.js"></script>
   </head>
   <body>
     <main>
-      <section id="image-section">
+      <section class="image-section">
         <h1>Please select your favorite item!</h1>
-        <img class="research-image" id="" src="">
-        <img class="research-image" id="" src="">
-        <img class="research-image" id="" src="">
+        <div class="flex-container">
+          <img class="research-image animated zoomIn" id="" src="">
+          <img class="research-image animated zoomIn" id="" src="">
+          <img class="research-image animated zoomIn" id="" src="">
+        </div>
       </section>
-      <section id="user-form">
-      </section>
+      <article id="user-form">
+      </article>
       <article id="canvas-section">
       </article>
     </main>
