trying to make images slide in and out of view.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <main>
       <section class="image-section">
         <h1>Please select your favorite item!</h1>
-        <div class="flex-container">
-          <img class="research-image animated zoomIn" id="" src="">
-          <img class="research-image animated zoomIn" id="" src="">
-          <img class="research-image animated zoomIn" id="" src="">
+        <div id="flex-container">
+          <img class="research-image" id="" src="">
+          <img class="research-image" id="" src="">
+          <img class="research-image" id="" src="">
         </div>
       </section>
       <article id="user-form">
