Styling looks cleaner.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <main>
       <section class="image-section">
         <h1>Please select your favorite item!</h1>
-        <div id="flex-container">
-          <img class="research-image" id="" src="">
-          <img class="research-image" id="" src="">
-          <img class="research-image" id="" src="">
-        </div>
+        <img class="research-image animated fadeIn" id="" src="">
+        <img class="research-image animated fadeIn" id="" src="">
+        <img class="research-image animated fadeIn" id="" src="">
       </section>
       <article id="user-form">
       </article>
