Styling, added background image and changed some opacities and color scheme.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
   </head>
   <body>
     <main>
-      <section class="image-section">
-        <h1>Please select your favorite item!</h1>
-        <img class="research-image animated fadeIn" id="" src="">
-        <img class="research-image animated fadeIn" id="" src="">
-        <img class="research-image animated fadeIn" id="" src="">
-      </section>
-      <article id="user-form">
-      </article>
+      <div class="flex-container">
+        <section class="image-section">
+          <h1>Please select your favorite item</h1>
+          <img class="research-image first" id="" src="">
+          <img class="research-image second" id="" src="">
+          <img class="research-image third" id="" src="">
+          <article id="user-form">
+          </article>
+        </section>
+      </div>
       <article id="canvas-section">
       </article>
     </main>
